Clean up a stray #ifdef _MODULE - it prevented definition of COMPAT_SIGCONTEXT which in turn prevented building of the SYS_compat16_sigaction_14 code.

Should address PR kern/53260

XXX Pull-up to netbsd-8